2004-02-03 Benoit Regrain
     * gdcmDirList : to parse a hard drive directory in recursive (or not)
     * gdcmDicomDir : add the load of directory
     * Bug fix and print add-on

2004-02-03 Jean-Pierre Roux
     * ENH gdcmParser : allows "DICM" files, with NO group '0002'
     * FIX handling 'non string elements' unsecure area (LUT, overlays, etc)
     * FIX Dicts/dicomV3.dic : Add a few missing 'group length' Elements 
     * FIX gdcmParser.cxx : 'group length' elements are now considered 
           as integers, even for shadow groups, when file is Implicit VR
        
2004-02-02 Jean-Pierre Roux
     * FIX : gdcmWrite : equal_range() for multimap doesn't return a 'second' 
	          iterator on last
             of the last synonym :-(
     * FIX : gdcmWrite::WriteBase : method stops if Pixels not yet Read (except 
	          for DICOMDIR ;-)
     * ENH gdcmData/checkWrite.sh :modif for full check of Explicit VR writting
     * FIX taking into account the possible 7fe0,0010 multiplicity        
     * FIX add GRPixel,NumPixel,countGrPixel (gdcmParser protected members)
           to allow removal of references to 7fe0,0010, to deal with
	   ACR-NEMA images, when 0028,0200 is meaningfull

2004-01-31 Jean-Pierre Roux
     * FIX gdcmParser::WriteEntries : when a VR is tagged as 'Unknown'
                       no longer writes 'Un' on disk
     * FIX  SQ elements with actual length are now dealt with corectly
     * FIX gdcmFile::WriteBase make the difference, for color images, between
                     the length (for Palette expanded omages) 
		     and Raw Length (non expanded image + Palette)
      * FIX  Dicts/dicomV3.dic : removal of 'CTX' (context dependant) VR
                     (that broke Write). Replaced by UL.
		     Aware user will reload the field if he 
		     thinks it's necesssary
		       
2004-01-30 Jean-Pierre Roux
     * gdcmParser::CheckSwap() now defaults the filetype to ACR 