@@ -112,6 +112,10 @@ SOURCE=..\..\src\gdcmDictSet.cxx
 # End Source File
 # Begin Source File
 
+SOURCE=..\..\src\gdcmDirList.cxx
+# End Source File
+# Begin Source File
+
 SOURCE=..\..\src\gdcmException.cxx
 # End Source File
 # Begin Source File
@@ -174,10 +178,6 @@ SOURCE=..\vtkGdcmReader.cxx
 # Begin Group "Header Files"
 
 # PROP Default_Filter "h;hpp;hxx;hm;inl"
-# Begin Source File
-
-SOURCE=..\vtkGdcmReader.h
-# End Source File
 # End Group
 # Begin Group "Resource Files"
 
@@ -195,6 +195,10 @@ SOURCE=c:\Creatis\vtkDistrib\lib\vtk\vtkCommon.lib
 SOURCE=c:\Creatis\vtkDistrib\lib\vtk\vtkFiltering.lib
 # End Source File
 # End Group
+# Begin Source File
+
+SOURCE=..\..\src\gdcmDirList.h
+# End Source File
 # Begin Source File
 
 SOURCE=..\..\lib\libgdcmljpeg.lib
