@@ -1,3 +1,6 @@
+2004-02-04 Benoit Regrain
+     * FIX : WriteEntries : coding style & logic in parameters
+
 2004-02-03 Benoit Regrain
      * gdcmDirList : to parse a hard drive directory in recursive (or not)
      * gdcmDicomDir : add the load of directory
